[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/MenuScreen/logo.png" type="Texture" id=2]
[ext_resource path="res://scripts/buttons/ExitButton.gd" type="Script" id=3]
[ext_resource path="res://assets/MenuScreen/Tela de In√≠cio 8.png" type="Texture" id=4]
[ext_resource path="res://assets/MenuScreen/botao_iniciar (8).png" type="Texture" id=5]
[ext_resource path="res://assets/MenuScreen/botao_opcoes.png" type="Texture" id=6]
[ext_resource path="res://assets/MenuScreen/botao_tutorial.png" type="Texture" id=7]
[ext_resource path="res://assets/MenuScreen/botao_sobre.png" type="Texture" id=8]
[ext_resource path="res://assets/MenuScreen/botao_sair.png" type="Texture" id=9]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float height = 20.0;
uniform float speed = 10.0;
uniform float frequency = 5.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/height = 20.0
shader_param/speed = 10.0
shader_param/frequency = 5.0

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -720.0
margin_right = 640.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 639.5, 359 )
scale = Vector2( 0.664062, 0.662963 )
texture = ExtResource( 4 )

[node name="Logo" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 647, 202 )
scale = Vector2( 0.863007, 0.848125 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="."]
margin_left = 532.0
margin_top = 388.0
margin_right = 760.0
margin_bottom = 694.0

[node name="StartButton" type="Button" parent="ButtonsVBoxContainer"]
margin_right = 228.0
margin_bottom = 55.0
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 5 )
icon_align = 1

[node name="TutorialButton" type="Button" parent="ButtonsVBoxContainer"]
margin_top = 59.0
margin_right = 228.0
margin_bottom = 114.0
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 7 )
icon_align = 1

[node name="OptionsButton" type="Button" parent="ButtonsVBoxContainer"]
margin_top = 118.0
margin_right = 228.0
margin_bottom = 173.0
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 6 )
icon_align = 1

[node name="Creditos" type="Button" parent="ButtonsVBoxContainer"]
margin_top = 177.0
margin_right = 228.0
margin_bottom = 232.0
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 8 )
icon_align = 1

[node name="ExitButton" type="Button" parent="ButtonsVBoxContainer"]
margin_top = 236.0
margin_right = 228.0
margin_bottom = 291.0
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 9 )
icon_align = 1
script = ExtResource( 3 )

[connection signal="pressed" from="ButtonsVBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonsVBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="button_up" from="ButtonsVBoxContainer/Creditos" to="." method="_on_Creditos_button_up"]
[connection signal="pressed" from="ButtonsVBoxContainer/ExitButton" to="ButtonsVBoxContainer/ExitButton" method="_on_ExitButton_pressed"]
